--- a/app/src/main/res/layout/activity_manage_order.xml
+++ b/app/src/main/res/layout/activity_manage_order.xml
@@ -1,60 +1,47 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ManageOrderActivity">
+    android:orientation="vertical"
+    android:fitsSystemWindows="true"
+    android:background="@android:color/background_light">
 
-    <!-- Toolbar with Back Button -->
+    <!-- Toolbar with Back Button and Centered Title -->
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="@android:color/white"
-        android:titleTextColor="@android:color/black"
-        app:title="Manage Your Orders"
-        app:navigationIcon="@drawable/ic_back"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@android:color/holo_blue_light"
+        app:title="Manage Orders"
+        app:titleTextColor="@android:color/white"
+        app:navigationIcon="@drawable/ic_back_white"
         android:elevation="4dp" />
 
-    <!-- Divider below Toolbar -->
-    <View
-        android:id="@+id/view_divider"
-        android:layout_width="0dp"
-        android:layout_height="1dp"
-        android:background="?android:attr/listDivider"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <!-- Spinner for Order Status -->
-    <Spinner
-        android:id="@+id/spinner_order_status"
-        android:layout_width="0dp"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:padding="12dp"
-        android:background="@drawable/rounded_spinner_bg"
-        app:layout_constraintTop_toBottomOf="@+id/view_divider"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        android:orientation="vertical"
+        android:padding="16dp"
+        android:background="@android:color/background_light">
 
-    <!-- RecyclerView for Orders List -->
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView_orders"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/spinner_order_status"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:padding="8dp"
-        android:clipToPadding="false"
-        android:overScrollMode="never" /> <!-- Optional: Improve over-scroll behavior -->
+        <!-- Spinner for Order Status -->
+        <Spinner
+            android:id="@+id/spinner_order_status"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:background="@drawable/spinner_background"
+            android:padding="12dp" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <!-- RecyclerView for Orders List -->
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginTop="20dp"
+            android:layout_weight="1" />
+
+    </LinearLayout>
+
+</LinearLayout>
