--- a/app/src/main/res/layout/activity_manage_order_detail.xml
+++ b/app/src/main/res/layout/activity_manage_order_detail.xml
@@ -233,31 +233,18 @@
                         android:textSize="16sp"
                         android:textColor="#757575" />
 
-                    <LinearLayout
+                    <Button
+                        android:id="@+id/btn_payment_details"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:paddingTop="8dp">
+                        android:text="View Receipt"
+                        android:textSize="14sp"
+                        android:textColor="@android:color/white"
+                        android:backgroundTint="@android:color/holo_blue_dark"
+                        android:paddingStart="16dp"
+                        android:paddingEnd="16dp"
+                        android:layout_marginTop="8dp"/>
 
-                        <TextView
-                            android:id="@+id/tv_receipt_label"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Receipt Url:"
-                            android:textSize="14sp"
-                            android:textColor="#757575"
-                            android:layout_marginEnd="8dp" />
-
-                        <TextView
-                            android:id="@+id/payment_details"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Payment Details"
-                            android:textSize="14sp"
-                            android:textColor="#212121"
-                            android:autoLink="web"
-                            android:linksClickable="true" />
-                    </LinearLayout>
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
