--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -79,6 +79,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="textEmailAddress"
+                    android:focusable="false"
+                    android:cursorVisible="false"
+                    android:clickable="false"
+                    android:longClickable="false"
+                    android:enabled="false"
                     android:imeOptions="actionNext" />
             </com.google.android.material.textfield.TextInputLayout>
 
